<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GV_LIFT" Id="{e6323507-b87d-4c7b-84f1-bad2e02e7ff1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}

(*
Signal Flow:

 Physical/HMI Button ---> *_BUTTON_IN ---> *_BUTTON_OUT ---> *_SAFETY_IN ---> *_SAFETY_OUT ---> *_INDICATOR_IN ---> *_INDICATOR_OUT
|------PHYSICAL-----|    |--------IO_SWITCHBOARD-------|    |-------SAFETY PROJECT--------|    |-----------IO_SWITCHBOARD-----------|

This convolution is based on the alias device scheme in the safety project. Recall that an input alias in the safety project must be 
mapped to a PLC/Physical output, and vice versa. The IO_SWITCHBOARD handles signal passthroughs and negotiations between operator
stations. Variables in this GVL should reflect the accurate state of signals to/from the machine. As such, the UP/DOWN/RUN buttons
should reference the appropriate local variables in IO_SWITCHBOARD, which will route signals to the UP/DOWN/RUN_BUTTON_OUT outputs in
this GVL.
*)
VAR_GLOBAL
	REMOTE_ACTIVE_INDICATOR_OUT AT %Q* : BOOL;
	CONSOLE_ACTIVE_INDICATOR_OUT AT %Q* : BOOL;
	
	SYSTEM_RESET_BUTTON_IN AT %I*: BOOL;
	
	UP_BUTTON_IN AT %I* : BOOL;
	UP_BUTTON_OUT AT %Q* : BOOL;
	
	UP_INDICATOR_IN AT %I* : BOOL;
	UP_INDICATOR_OUT AT %Q* : BOOL;
	
	DOWN_BUTTON_IN AT %I* : BOOL;
	DOWN_BUTTON_OUT AT %Q* : BOOL;
	
	DOWN_INDICATOR_IN AT %I* : BOOL;
	DOWN_INDICATOR_OUT AT %Q* : BOOL;

	RUN_BUTTON_IN AT %I* : BOOL;
	RUN_BUTTON_OUT AT %Q* : BOOL;
	
	DOOR_1_INDICATOR_IN AT %I* : BOOL;
	DOOR_1_INDICATOR_OUT AT %Q* : BOOL;
	
	DOOR_1_INDICATOR_LATCH_IN AT %I* : BOOL;
	DOOR_1_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	DOOR_2_INDICATOR_IN AT %I* : BOOL;
	DOOR_2_INDICATOR_OUT AT %Q* : BOOL;
	
	DOOR_2_INDICATOR_LATCH_IN AT %I* : BOOL;
	DOOR_2_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	DOOR_3_INDICATOR_IN AT %I* : BOOL;
	DOOR_3_INDICATOR_OUT AT %Q* : BOOL;
	
	DOOR_3_INDICATOR_LATCH_IN AT %I* : BOOL;
	DOOR_3_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	DOOR_4_INDICATOR_IN AT %I* : BOOL;
	DOOR_4_INDICATOR_OUT AT %Q* : BOOL;
	
	DOOR_4_INDICATOR_LATCH_IN AT %I* : BOOL;
	DOOR_4_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	DOWN_LIMIT_INDICATOR_IN AT %I* : BOOL;
	DOWN_LIMIT_INDICATOR_OUT AT %Q* : BOOL;
	
	DOWN_LIMIT_INDICATOR_LATCH_IN AT %I* : BOOL;
	DOWN_LIMIT_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	UP_LIMIT_INDICATOR_IN AT %I* : BOOL;
	UP_LIMIT_INDICATOR_OUT AT %Q* : BOOL;
	
	UP_LIMIT_INDICATOR_LATCH_IN AT %I* : BOOL;
	UP_LIMIT_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	ULTIMATE_LIMIT_INDICATOR_IN AT %I* : BOOL;
	ULTIMATE_LIMIT_INDICATOR_OUT AT %Q* : BOOL;
	
	ULTIMATE_LIMIT_INDICATOR_LATCH_IN AT %I* : BOOL;
	ULTIMATE_LIMIT_INDICATOR_LATCH_OUT AT %Q* : BOOL;
	
	CRUSH_PROTECTION_INDICATOR_IN AT %I* : BOOL;
	CRUSH_PROTECTION_INDICATOR_OUT AT %Q* : BOOL;
	
	FAULT_INDICATOR_IN AT %I* : BOOL;
	FAULT_INDICATOR_OUT AT %Q* : BOOL;
	
	ESTOP_INDICATOR_IN AT %I* : BOOL;
	ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	REMOTE_ESTOP_INDICATOR_IN AT %I* : BOOL;
	REMOTE_ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	PIT_ESTOP_INDICATOR_IN AT %I* : BOOL;
	PIT_ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	PUMP_ESTOP_INDICATOR_IN AT %I* : BOOL;
	PUMP_ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	DOWNSTAGE_ESTOP_INDICATOR_IN AT %I* : BOOL;
	DOWNSTAGE_ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	UPSTAGE_ESTOP_INDICATOR_IN AT %I* : BOOL;
	UPSTAGE_ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	CONSOLE_ESTOP_INDICATOR_IN AT %I* : BOOL;
	CONSOLE_ESTOP_INDICATOR_OUT AT %Q* : BOOL;
	
	TARGET_POSITION : REAL;
	CURRENT_POSITION : REAL;
	
	STATUS : MOTION_STATE;
	
	MTS_ALLOWED : BOOL := FALSE;
	JUST_RAN: BOOL := FALSE;
	
	SYSTEM_FAULT : BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>